# icetime

./: AGENTS.md  CLAUDE.md  LICENSE  Makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml
src/icetime/: __init__.py  __main__.py  api.py  cli.py  db.py  models.py  report.py
tests/: conftest.py  test_api.py  test_cli.py  test_db.py  test_models.py  test_report.py
tests/fixtures/: games.json  pbp.json  seasons.json  shifts.json  teams.json
